Running Prettier in Project

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,23 +5,27 @@
         <section class="mb-2">
             <!-- Twitter -->
             <a class="btn footer-btn" href="https://twitter.com/NakazoneVitor">
-                <fa-icon class="input-div-icon"
-                         [icon]="_twitterIcon">
+                <fa-icon class="input-div-icon" [icon]="_twitterIcon">
                 </fa-icon>
             </a>
 
             <!-- Linkedin -->
-            <a class="btn footer-btn" href="https://www.linkedin.com/in/vitor-hideyoshi/" role="button">
-                <fa-icon class="input-div-icon"
-                         [icon]="_linkedinIcon">
+            <a
+                class="btn footer-btn"
+                href="https://www.linkedin.com/in/vitor-hideyoshi/"
+                role="button"
+            >
+                <fa-icon class="input-div-icon" [icon]="_linkedinIcon">
                 </fa-icon>
             </a>
 
             <!-- Github -->
-            <a class="btn footer-btn" href="https://github.com/HideyoshiNakazone" role="button">
-                <fa-icon class="input-div-icon"
-                         [icon]="_githubIcon">
-                </fa-icon>
+            <a
+                class="btn footer-btn"
+                href="https://github.com/HideyoshiNakazone"
+                role="button"
+            >
+                <fa-icon class="input-div-icon" [icon]="_githubIcon"> </fa-icon>
             </a>
         </section>
         <!-- Section: Social media -->
@@ -29,9 +33,11 @@
     <!-- Grid container -->
 
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: #2E2E2E;">
+    <div class="text-center p-3" style="background-color: #2e2e2e">
         © 2023 Copyright:
-        <a class="text-white" href="https://hideyoshi.com.br/">Hideyoshi Solutions</a>
+        <a class="text-white" href="https://hideyoshi.com.br/"
+            >Hideyoshi Solutions</a
+        >
     </div>
     <!-- Copyright -->
 </footer>
