--- a/src/app/shared/components/popup/popup.component.html
+++ b/src/app/shared/components/popup/popup.component.html
@@ -1,11 +1,15 @@
-<div #popup
-class="popup-background" 
-[@popupState]="popupState"
-(@popupState.done)="animationStop()">
-    <div class="popup"
-    appClickedOutside 
-    (clickOutside)="closePopup()"
-    [ignoreElementList]="ignoreClickOutside">
+<div
+    #popup
+    class="popup-background"
+    [@popupState]="popupState"
+    (@popupState.done)="animationStop()"
+>
+    <div
+        class="popup"
+        appClickedOutside
+        (clickOutside)="closePopup()"
+        [ignoreElementList]="ignoreClickOutside"
+    >
         <div class="popup-header">
             <div class="popup-close-btn" (click)="closePopup()"></div>
         </div>
