--- a/src/app/header/header-dropdown/header-dropdown.component.css
+++ b/src/app/header/header-dropdown/header-dropdown.component.css
@@ -2,19 +2,19 @@
     width: fit-content;
     border-radius: 8px;
     background-color: #ffffff;
-    border: 1px solid rgba(46, 46, 46, .3);
+    border: 1px solid rgba(46, 46, 46, 0.3);
     box-sizing: 0 5px 25px rgba(0, 0, 0, 0.1);
     box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.2);
 }
 
 .dropdown:before {
-    content: '';
+    content: "";
     width: 15px;
     height: 15px;
     position: absolute;
     background-color: #ffffff;
-    border-top: 1px solid rgba(46, 46, 46, .3);
-    border-left: 1px solid rgba(46, 46, 46, .3);
+    border-top: 1px solid rgba(46, 46, 46, 0.3);
+    border-left: 1px solid rgba(46, 46, 46, 0.3);
     transform: translateX(120px) translateY(-50%) rotate(45deg);
 }
 .info {
@@ -40,7 +40,7 @@
 }
 
 .dropdown-item {
-    display: flex; 
+    display: flex;
     align-items: center;
     padding: 8px 30px;
     border-top: 1px solid rgba(0, 0, 0, 0.05);
@@ -59,12 +59,12 @@
 .dropdown-item:hover .icon-box fa-icon {
     opacity: 1;
     color: #f44336;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .dropdown-item p {
     color: #555555;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     text-decoration: none;
     padding-left: 10px;
