--- a/src/app/header/header-popup/my-profile/profile-picture-picker/profile-picture-picker.component.html
+++ b/src/app/header/header-popup/my-profile/profile-picture-picker/profile-picture-picker.component.html
@@ -1,20 +1,27 @@
 <div class="btn-container">
     <div class="input-group mb-3">
         <div class="custom-file">
-            <input type="file"
-                   class="custom-file-input"
-                   id="inputProfilePicture"
-                   aria-describedby="inputProfilePicture"
-                   (change)="handleFileInput($event)">
-            <label class="custom-file-label"
-                   for="inputProfilePicture">
-                {{isProfilePictureSelected ? getFileName() : 'Profile Picture'}}
+            <input
+                type="file"
+                class="custom-file-input"
+                id="inputProfilePicture"
+                aria-describedby="inputProfilePicture"
+                (change)="handleFileInput($event)"
+            />
+            <label class="custom-file-label" for="inputProfilePicture">
+                {{
+                    isProfilePictureSelected ? getFileName() : "Profile Picture"
+                }}
             </label>
         </div>
         <div class="input-group-append">
-            <button class="btn btn-outline-secondary"
-            [disabled]="!isProfilePictureSelected"
-            (click)="uploadProfilePicture()">Upload</button>
+            <button
+                class="btn btn-outline-secondary"
+                [disabled]="!isProfilePictureSelected"
+                (click)="uploadProfilePicture()"
+            >
+                Upload
+            </button>
         </div>
     </div>
 </div>
