--- a/src/app/header/header-popup/signup/signup.component.html
+++ b/src/app/header/header-popup/signup/signup.component.html
@@ -1,60 +1,81 @@
-<app-popup [state]="state"
+<app-popup
+    [state]="state"
     (stateChange)="onStateChange($event)"
-    [ignoreClickOutside]="ignoreClickOutside">
-
-
-    <div class="container m-0 overflow-hidden"
-         [@resizeContainerForErrorMessage]="hideErrorMessage()">
-
-        <app-error-box [errorMessage]="errorMessage"
-                       [@showErrorMessage]="showErrorMessage()">
+    [ignoreClickOutside]="ignoreClickOutside"
+>
+    <div
+        class="container m-0 overflow-hidden"
+        [@resizeContainerForErrorMessage]="hideErrorMessage()"
+    >
+        <app-error-box
+            [errorMessage]="errorMessage"
+            [@showErrorMessage]="showErrorMessage()"
+        >
         </app-error-box>
 
-        <div class="container authentication-container"
-             [@hideAuthContainer]="hideErrorMessage()"
-             (@hideAuthContainer.done)="hideAuthContainer($event)">
+        <div
+            class="container authentication-container"
+            [@hideAuthContainer]="hideErrorMessage()"
+            (@hideAuthContainer.done)="hideAuthContainer($event)"
+        >
             <div class="row">
                 <div class="col-lg-6 auth-body auth-body-form">
                     <form [formGroup]="signupForm" (ngSubmit)="onSignUp()">
                         <div class="input-div">
-                            <fa-icon class="input-div-icon"
-                            [icon]="_fullnameIcon">
+                            <fa-icon
+                                class="input-div-icon"
+                                [icon]="_fullnameIcon"
+                            >
                             </fa-icon>
-                            <input type="text" id="fullname"
+                            <input
+                                type="text"
+                                id="fullname"
                                 formControlName="fullname"
                                 class="form-control"
-                                placeholder="Full Name">
+                                placeholder="Full Name"
+                            />
                         </div>
                         <div class="input-div">
-                            <fa-icon class="input-div-icon"
-                            [icon]="_emailIcon">
+                            <fa-icon class="input-div-icon" [icon]="_emailIcon">
                             </fa-icon>
-                            <input type="text" id="email"
+                            <input
+                                type="text"
+                                id="email"
                                 formControlName="email"
                                 class="form-control"
-                                placeholder="Email">
+                                placeholder="Email"
+                            />
                         </div>
                         <div class="input-div">
-                            <fa-icon class="input-div-icon"
-                            [icon]="_userIcon">
+                            <fa-icon class="input-div-icon" [icon]="_userIcon">
                             </fa-icon>
-                            <input type="text" id="username"
+                            <input
+                                type="text"
+                                id="username"
                                 formControlName="username"
                                 class="form-control"
-                                placeholder="Username">
+                                placeholder="Username"
+                            />
                         </div>
                         <div class="input-div">
-                            <fa-icon class="input-div-icon"
-                            [icon]="_passwordIcon">
+                            <fa-icon
+                                class="input-div-icon"
+                                [icon]="_passwordIcon"
+                            >
                             </fa-icon>
-                            <input type="password" id="password"
+                            <input
+                                type="password"
+                                id="password"
                                 formControlName="password"
                                 class="form-control"
-                                placeholder="Password">
+                                placeholder="Password"
+                            />
                         </div>
-                        <button class="btn"
-                                [disabled]="!signupForm.valid"
-                            type="submit">
+                        <button
+                            class="btn"
+                            [disabled]="!signupForm.valid"
+                            type="submit"
+                        >
                             SignUp
                         </button>
                     </form>
@@ -63,24 +84,30 @@
                     <div class="line"></div>
                 </div>
                 <div class="col-lg-6 auth-body auth-body-links">
-                    <button mat-button
-                    class="oauth-button d-flex justify-content-center align-items-center"
-                    (click)="onGoogleLogin()">
-                        <mat-icon style="width: 50px; height:30px"
-                                  svgIcon="google-logo"></mat-icon>
+                    <button
+                        mat-button
+                        class="oauth-button d-flex justify-content-center align-items-center"
+                        (click)="onGoogleLogin()"
+                    >
+                        <mat-icon
+                            style="width: 50px; height: 30px"
+                            svgIcon="google-logo"
+                        ></mat-icon>
                         Login With Google
                     </button>
-                    <button mat-button
-                    class="oauth-button d-flex justify-content-center align-items-center"
-                    (click)="onGithubLogin()">
-                        <mat-icon style="width: 50px; height:30px"
-                                  svgIcon="github-logo"></mat-icon>
+                    <button
+                        mat-button
+                        class="oauth-button d-flex justify-content-center align-items-center"
+                        (click)="onGithubLogin()"
+                    >
+                        <mat-icon
+                            style="width: 50px; height: 30px"
+                            svgIcon="github-logo"
+                        ></mat-icon>
                         Login With Github
                     </button>
                 </div>
             </div>
         </div>
-
     </div>
-
 </app-popup>
