--- a/src/app/shared/components/popup/popup.component.css
+++ b/src/app/shared/components/popup/popup.component.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .popup-background {
@@ -51,7 +51,7 @@
     background: #808080;
     border-radius: 5px;
     position: fixed;
-    content: '';
+    content: "";
     width: 25px;
     height: 5px;
 }
@@ -73,11 +73,9 @@
     height: 60px;
 }
 
-@media (min-width:767px) {
-
+@media (min-width: 767px) {
     .popup {
         width: fit-content;
         max-width: unset;
     }
-
 }
