--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'font-montserrat.css';
+@import "font-montserrat.css";
 
 * {
     padding: 0 auto;
     margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Montserrat", sans-serif;
 }
