--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="text-center text-white page-footer">
     <!-- Grid container -->
-    <div class="p-4 pb-0" style="background-color: #525252">
+    <div class="footer-links" style="background-color: #525252">
         <!-- Section: Social media -->
         <section class="mb-2">
             <!-- Twitter -->
@@ -33,7 +33,7 @@
     <!-- Grid container -->
 
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: #2e2e2e">
+    <div class="footer-text" style="background-color: #2e2e2e">
         © 2023 Copyright:
         <a class="text-white" href="https://hideyoshi.com.br/"
             >Hideyoshi Solutions</a
