--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,60 +1,63 @@
-<div class="header">
-    <div class="main" #header>
-        <div class="logo">
-            <a routerLink="">
-                <img src="assets/img/logohideyoshi-white.png" alt="" />
-            </a>
-        </div>
-        <div class="nav-links">
-            <ul class="link-container">
-                <li *ngFor="let page of pages">
-                    <a [routerLink]="page.route">{{ page.name }}</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="profile" #profileDropdown>
-            <div
-                class="profile-btn"
-                (click)="toogleProfileDropdown()"
-                #profileBtn
-            >
-                <fa-icon
-                    *ngIf="!loggedUser || !loggedUser.profilePictureUrl"
-                    class="fas fa-user"
-                    [icon]="userIcon"
-                ></fa-icon>
-                <img
-                    *ngIf="!!loggedUser && !!loggedUser.profilePictureUrl"
-                    class="profile-picture"
-                    [ngSrc]="loggedUser.profilePictureUrl"
-                    width="50"
-                    height="50"
-                    alt="Profile Picture"
-                    priority
-                />
+<div class="wrapper">
+    <div class="header">
+        <div class="main" #header>
+            <div class="logo">
+                <a routerLink="">
+                    <img src="assets/img/logohideyoshi-white.png" alt="" />
+                </a>
+            </div>
+            <div class="nav-links">
+                <ul class="link-container">
+                    <li *ngFor="let page of pages">
+                        <a [routerLink]="page.route">{{ page.name }}</a>
+                    </li>
+                </ul>
             </div>
 
-            <app-header-dropdown
-                class="dropdown"
-                (clickOutside)="closeDropdown()"
-                [ignoreClickOutside]="[profileBtn]"
-                [state]="profileDropdownState"
-                (loginPopupState)="loginPopupStateChange($event)"
-                (signupPopupState)="signupPopupStateChange($event)"
-                (myProfilePopupState)="myProfilePopupStateChange($event)"
-                (helpPopupState)="helpPopupStateChange($event)"
-            >
-            </app-header-dropdown>
-        </div>
-        <div class="burger-container" (click)="toogleNavSlider()">
-            <div
-                class="burger-menu"
-                [ngClass]="{ open: navSliderStatus }"
-            ></div>
+            <div class="profile" #profileDropdown>
+                <div
+                    class="profile-btn"
+                    (click)="toogleProfileDropdown()"
+                    #profileBtn
+                >
+                    <fa-icon
+                        *ngIf="!loggedUser || !loggedUser.profilePictureUrl"
+                        class="fas fa-user"
+                        [icon]="userIcon"
+                    ></fa-icon>
+                    <img
+                        *ngIf="!!loggedUser && !!loggedUser.profilePictureUrl"
+                        class="profile-picture"
+                        [ngSrc]="loggedUser.profilePictureUrl"
+                        width="50"
+                        height="50"
+                        alt="Profile Picture"
+                        priority
+                    />
+                </div>
+
+                <app-header-dropdown
+                    class="dropdown"
+                    (clickOutside)="closeDropdown()"
+                    [ignoreClickOutside]="[profileBtn]"
+                    [state]="profileDropdownState"
+                    (loginPopupState)="loginPopupStateChange($event)"
+                    (signupPopupState)="signupPopupStateChange($event)"
+                    (myProfilePopupState)="myProfilePopupStateChange($event)"
+                    (helpPopupState)="helpPopupStateChange($event)"
+                >
+                </app-header-dropdown>
+            </div>
+            <div class="burger-container" (click)="toogleNavSlider()">
+                <div
+                    class="burger-menu"
+                    [ngClass]="{ open: navSliderStatus }"
+                ></div>
+            </div>
         </div>
     </div>
-    <div #nav>
+
+    <div class="slider-container" #nav>
         <app-header-slider
             [(state)]="navSliderStatus"
             [clickOutsideStopWatching]="userSliderStatus"
@@ -69,7 +72,7 @@
         </app-header-slider>
     </div>
 
-    <div #user>
+    <div class="slider-container" #user>
         <app-header-slider
             [(state)]="userSliderStatus"
             [ignoreClickOutside]="[header, nav]"
@@ -85,4 +88,5 @@
         </app-header-slider>
     </div>
 </div>
+
 <div class="header-spacer"></div>
