--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -20,18 +20,22 @@
     padding: 20px 0;
 }
 
-.footer-links a {
-    color: #ffffff;
-    font-size: 18px;
-    margin: 0 10px;
-}
-
 .footer-btn {
     color: #ffffff;
     font-size: 18px;
     border: 1px solid #ffffff;
     border-radius: 50%;
-    margin: 0 5px;
+    margin: 0 10px;
+
+    width: 42px;
+    height: 42px;
+}
+
+.footer-btn a {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-btn:hover {
