Makes Header with Gradient for Better Styling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,4 +37,8 @@
             Here are some of the technologies I've been working with recently:
         </p>
     </div>
+
+    <div class="stack-slider">
+        
+    </div>
 </div>
