--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,7 +5,9 @@
     position: fixed;
     width: 100vw;
 
-    background-color: #2e2e2e;
+
+    background: rgb(46,46,46);
+    background: linear-gradient(180deg, rgba(46,46,46,1) 65%, rgba(46,46,46,0.45) 100%);
     z-index: 50;
 
     height: 10vh;
