--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -95,7 +95,8 @@
 
 /* STACK SECTION*/
 .stack-section {
-    background-color: #f1f1f1;
+    background: rgb(241,241,241);
+    /*background: linear-gradient(0deg, rgba(241,241,241,1) 80%, rgba(51,51,51,1) 100%);*/
     height: 90vh;
 }
 .stack {
@@ -103,6 +104,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.stack h2 {
+    font-weight: 600;
+    font-size: 2.5rem;
 }
 
 .stack p {
