Implements Initial Stack Slider

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,6 +39,7 @@
     </div>
 
     <div class="stack-slider">
-        
+        <app-stack-slider>
+        </app-stack-slider>
     </div>
 </div>
