--- a/src/app/home/stack-slider/stack-card/stack-card.component.css
+++ b/src/app/home/stack-slider/stack-card/stack-card.component.css
@@ -5,12 +5,11 @@
 }
 
 .stack-card-image {
-    width: 100%;
-    border-top-left-radius: 15px !important;
-    border-top-right-radius: 15px !important;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    width: 250px;
+    height: 250px;
+    position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .stack-card-body {
@@ -22,9 +21,18 @@
     inline-size: 250px;
 }
 
+.stack-card-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
 .stack-card-text {
     word-break: break-all !important;
     white-space: normal !important;
+    font-size: 1rem;
+    font-weight: 400 !important;
+    font-family: 'Hind', sans-serif !important;
 }
 
 
@@ -35,6 +43,7 @@
 }
 
 .inactive {
-    opacity: 0.85;
-    width: 275px;
+    opacity: 0.7;
+    width: 300px;
+    height: 410px;
 }
