--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap');
 @import "font-montserrat.css";
 
 * {
@@ -20,4 +21,8 @@ h4,
 h5,
 h6 {
     font-family: "Montserrat", sans-serif;
+}
+
+p {
+    font-family: "Hind", sans-serif;
 }
