--- a/src/app/home/stack-slider/stack-card/stack-card.component.css
+++ b/src/app/home/stack-slider/stack-card/stack-card.component.css
@@ -1,5 +1,8 @@
 .stack-card {
-    width: 300px;
+    width: 325px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     border-radius: 15px;
 }
@@ -44,6 +47,6 @@
 
 .inactive {
     opacity: 0.7;
-    width: 300px;
+    width: 280px;
     height: 410px;
 }
