--- a/src/app/home/stack-slider/stack-card/stack-card.component.css
+++ b/src/app/home/stack-slider/stack-card/stack-card.component.css
@@ -14,6 +14,10 @@
     display: flex;
     align-items: center;
 }
+.stack-card-image::selection,
+.stack-card-image *::selection {
+    background: transparent;
+}
 
 .stack-card-body {
     padding: 10px;
